--- a/package.json
+++ b/package.json
@@ -3,16 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
+    "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-multi-carousel": "^2.8.5",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^9.1.2",
+    "react-datepicker": "^7.3.0",
+    "react-select": "^5.8.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "xlsx": "^0.18.5",
+    "react-time-picker": "^7.0.0",
+    "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
+  
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,5 +58,4 @@
     "postcss": "^8.4.44",
     "tailwindcss": "^3.4.10"
   }
- 
 }
