--- a/package.json
+++ b/package.json
@@ -11,22 +11,24 @@
     "crypto-js": "^4.2.0",
     "immer": "^10.1.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
     "react-paginate": "^8.2.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^9.1.2",
-    "react-datepicker": "^7.3.0",
-    "react-select": "^5.8.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
-    "xlsx": "^0.18.5",
-    "react-time-picker": "^7.0.0",
     "react-table": "^7.8.0",
-    "web-vitals": "^2.1.4"
+    "react-time-picker": "^7.0.0",
+    "slick-carousel": "^1.8.1",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
