--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bharatshopfrontend",
   "version": "0.1.0",
+  
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
@@ -55,6 +56,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.25.7",
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-react": "^7.25.7",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.44",
     "tailwindcss": "^3.4.10"
